--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Redux</title>
+    <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
     <script src="/node_modules/react/dist/react.js" defer></script>
     <script src="/node_modules/react-dom/dist/react-dom.js" defer></script>
     <script src="/store.js" defer></script>
-    <script src="/app.jsx" defer></script>
+    <script type="text/babel" src="/app.jsx" defer></script>
 
     <style>
         body {
@@ -49,14 +50,7 @@
 
     <h1>Hello Redux</h1>
 
-    <section id="root" class="root">
-        <span class="count">0</span>
-        <div class="buttons">
-            <button class="decrement">-</button>
-            <button class="reset">R</button>
-            <button class="increment">+</button>
-        </div>
-    </section>
+    <section id="root" class="root"></section>
 
 
 
