#7 createStore #my Redux

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
     <script src="/node_modules/react/dist/react.js" defer></script>
     <script src="/node_modules/react-dom/dist/react-dom.js" defer></script>
-    <script src="/store.js" defer></script>
+    <!--<script src="/store.js" defer></script>-->
+    <script src="/redux.js" defer></script>
     <script type="text/babel" src="/app.jsx" defer></script>
 
     <style>
