#7 createStore #my Redux change to Redux origin

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="/node_modules/react-dom/dist/react-dom.js" defer></script>
     <!--<script src="/store.js" defer></script>-->
     <script src="/redux.js" defer></script>
+    <script src="/node_modules/redux/dist/redux.js" defer></script>
     <script type="text/babel" src="/app.jsx" defer></script>
 
     <style>
