--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="/node_modules/react/dist/react.js" defer></script>
     <script src="/node_modules/react-dom/dist/react-dom.js" defer></script>
     <!--<script src="/store.js" defer></script>-->
-    <script src="/redux.js" defer></script>
+    <!--<script src="/redux.js" defer></script>-->
     <script src="/node_modules/redux/dist/redux.js" defer></script>
     <script type="text/babel" src="/app.jsx" defer></script>
 
@@ -44,6 +44,17 @@
         .reset,
         .increment {
             margin-left: 10px;
+        }
+        .value {
+            font-size: 1.8em;
+            width: 70px;
+            margin-top: 10px;
+            padding: 8px;
+            text-align: center;
+            border: none;
+            background-color: #000;
+            outline-color: #7749bd;
+            color: #fff;
         }
 
     </style>
